Disable docker login & push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
         - checkout
 
-        - run:
-            name: dockerhub-login
-            command: |
-                echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+        #- run:
+            #name: dockerhub-login
+            #command: |
+                #echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
         - run:
               name: escape-git-branch
@@ -40,8 +40,8 @@ jobs:
                 docker build -t $IMAGE .
                 docker tag $IMAGE testservice:latest
 
-        - run:
-            name: push-testservice-docker
-            command: |
-                IMAGE=iktestdocker/testservice:${CIRCLE_SHA1}--${ESCAPED_BRANCH}
-                docker push $IMAGE
+        #- run:
+            #name: push-testservice-docker
+            #command: |
+                #IMAGE=iktestdocker/testservice:${CIRCLE_SHA1}--${ESCAPED_BRANCH}
+                #docker push $IMAGE
