--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
         - checkout
 
+        - setup_remote_docker:
+            docker_layer_caching: false
         #- run:
             #name: dockerhub-login
             #command: |
