--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: circleci/python:3.7.0
 
     working_directory: ~/workspace
+    machine: true
     steps:
         - checkout
 
