--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/python:3.7.0
+    #docker:
+      #- image: circleci/python:3.7.0
 
     working_directory: ~/workspace
     machine: true
