--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
         - checkout
 
-        - setup_remote_docker:
-            docker_layer_caching: false
+        #- setup_remote_docker:
+            #docker_layer_caching: false
             
         - run:
             name: dockerhub-login
